fixed open api specification
